<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userDetails"
        android:textStyle="bold"
        android:textSize="40dp"
        android:layout_margin="30dp"
        />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Name"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/editTextUserName"
            android:layout_toStartOf="@+id/editTextUserName"/>

        <EditText
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUserName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_height"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"
            android:inputType="number|numberSigned|numberDecimal"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/textView3"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_weight"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"
            android:inputType="number|numberSigned|numberDecimal"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/textView4"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_age"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"
            android:inputType="number"/>
    </RelativeLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroupMaleFemale"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:id="@+id/radioButtonMale"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:id="@+id/radioButtonFemale"
            android:layout_gravity="center_horizontal"/>
    </RadioGroup>

    <Button
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:id="@+id/submitButton"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

</LinearLayout>